feat: implement basic AST

--- a/meson.build
+++ b/meson.build
@@ -1,2 +1,5 @@
-project('tachyon', 'cpp')
-executable('demo', 'main.cpp')
+project('tachyon', 'cpp',
+    default_options: ['optimization=2']
+)
+sources = ['main.cpp', 'parser.cpp', 'ast.cpp']
+executable('tachyon', sources)
