feat: virtual machine

--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,5 @@
 project('tachyon', 'cpp',
     default_options: ['optimization=2', 'cpp_std=c++23']
 )
-sources = ['main.cpp', 'parser.cpp', 'ast.cpp', 'visitor.cpp']
+sources = ['main.cpp', 'parser.cpp', 'ast.cpp', 'visitor.cpp', 'vm.cpp']
 executable('tachyon', sources)
