chore: rearrange file structure

--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,9 @@
 project('tachyon', 'cpp',
     default_options: ['optimization=2', 'cpp_std=c++23']
 )
-sources = ['main.cpp', 'parser.cpp', 'ast.cpp', 'visitor.cpp', 'vm.cpp', 'ir.cpp']
-executable('tachyon', sources)
+src_files = [ 'src/ast/visitor.cpp'
+            , 'src/ir/visitor.cpp'
+            , 'src/vm.cpp'
+            ]
+inc_dirs = include_directories('src')
+executable('tachyon', ['src/main.cpp'] + src_files, include_directories: inc_dirs)
