refactor: function-based virtual machine

--- a/meson.build
+++ b/meson.build
@@ -1,9 +1,15 @@
 project('tachyon', 'cpp',
-    default_options: ['optimization=2', 'cpp_std=c++23']
+    default_options: ['cpp_std=c++23']
 )
 src_files = [ 'src/ast/visitor.cpp'
             , 'src/ir/visitor.cpp'
             , 'src/vm.cpp'
             ]
+mimalloc = dependency('mimalloc')
+spdlog = dependency('spdlog')
+debug_args = []
+if get_option('buildtype') == 'debug'
+    debug_args += ['-DDEBUG']
+endif
 inc_dirs = include_directories('src')
-executable('tachyon', ['src/main.cpp'] + src_files, include_directories: inc_dirs)
+executable('tachyon', ['src/main.cpp'] + src_files, include_directories: inc_dirs, dependencies : [mimalloc, spdlog], cpp_args: debug_args)
