--- a/meson.build
+++ b/meson.build
@@ -3,6 +3,7 @@ project('tachyon', 'cpp',
 )
 src_files = [ 'src/ast/visitor.cpp'
             , 'src/ir/visitor.cpp'
+            , 'src/parser/tokenizer.cpp'
             , 'src/vm/vm.cpp'
             ]
 
