feat: brief parser

--- a/meson.build
+++ b/meson.build
@@ -4,6 +4,7 @@ project('tachyon', 'cpp',
 src_files = [ 'src/ast/visitor.cpp'
             , 'src/ir/visitor.cpp'
             , 'src/parser/tokenizer.cpp'
+            , 'src/parser/parser.cpp'
             , 'src/vm/vm.cpp'
             ]
 
