chore: move files to /src

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,35 +1,26 @@
-cmake_minimum_required(VERSION 3.28)
-set(CMAKE_CXX_SCAN_FOR_MODULES ON)
-project(tachyon LANGUAGES CXX)
+#cmake_minimum_required(VERSION 3.28)
+#set(CMAKE_CXX_SCAN_FOR_MODULES ON)
+#project(tachyon LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 23)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+#set(CMAKE_CXX_STANDARD 23)
+#set(CMAKE_CXX_STANDARD_REQUIRED ON)
+# set(CMAKE_CXX_EXTENSIONS OFF)
+#set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Enable modules
-set(CMAKE_EXPERIMENTAL_CXX_MODULE_DYNDEP 1)
+# set(CMAKE_EXPERIMENTAL_CXX_MODULE_DYNDEP 1)
 
-# Declare modules
-add_executable(tachyon
-        src/main.cpp
-)
+cmake_minimum_required(VERSION 3.28)
+project(Tachyon)
 
-target_sources(tachyon
-        PRIVATE
-        src/ast/ast.cpp
-        src/lexer/lexer.cpp
-        src/parser/parser.cpp
-        src/vm/vm.cpp
-)
+set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_EXPERIMENTAL_CXX_MODULE_CMAKE_API ON)
 
-target_sources(tachyon
-        PRIVATE
-        FILE_SET cxx_modules TYPE CXX_MODULES FILES
-        src/op.cppm
-        src/error.cppm
-        src/lexer/lexer.cppm
-        src/parser/parser.cppm
-        src/ast/ast.cppm
-        src/vm/vm.cppm
+file(GLOB_RECURSE MODULE_SOURCES "src/*.cppm")
+file(GLOB_RECURSE SOURCES "src/*.cpp")
+
+add_executable(tachyon)
+target_sources(tachyon 
+    PUBLIC FILE_SET CXX_MODULES FILES ${MODULE_SOURCES}
+    PRIVATE ${SOURCES}
 )
