--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,19 +21,19 @@ option(TACHYON_BUILD_BENCHMARKS "Build benchmarks" ON)
 option(TACHYON_BUILD_TOOLS "Build apps" ON)
 option(TACHYON_ENABLE_ASAN "Enable AddressSanitizer" OFF)
 
-#if (TACHYON_BUILD_TESTS)
-#    find_package(GTest QUIET)
-#    if (NOT GTest_FOUND)
-#        include(FetchContent)
-#        FetchContent_Declare(
-#                googletest
-#                GIT_REPOSITORY https://github.com/google/googletest.git
-#                GIT_TAG release-1.12.1
-#        )
-#        FetchContent_MakeAvailable(googletest)
-#    endif ()
-#    enable_testing()
-#endif ()
+if (TACHYON_BUILD_TESTS)
+    find_package(GTest QUIET)
+    if (NOT GTest_FOUND)
+                include(FetchContent)
+                FetchContent_Declare(
+                        googletest
+                        GIT_REPOSITORY https://github.com/google/googletest.git
+                        GIT_TAG v1.16.0
+                )
+                FetchContent_MakeAvailable(googletest)
+    endif ()
+    enable_testing()
+endif ()
 
 #if (TACHYON_BUILD_BENCHMARKS)
 #    find_package(benchmark QUIET)
@@ -62,6 +62,7 @@ if (TACHYON_BUILD_TOOLS)
     # add_subdirectory(tools/profiler)
 endif ()
 
+## for integration tests only. still useful.
 #if (TACHYON_BUILD_TESTS)
 #    add_subdirectory(tests)
 #endif ()
