chore: split up runtime namespace

--- a/apps/tachyon/CMakeLists.txt
+++ b/apps/tachyon/CMakeLists.txt
@@ -12,6 +12,7 @@ target_link_libraries(tachyon_tachyon
         tachyon::common
         tachyon::lexer
         tachyon::parser
+        tachyon::codegen
         tachyon::runtime
         #tachyon::parser
         #tachyon::analyzer
