feat: frontend support for conditional operations

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Cross-library integration tests
 add_executable(integration_tests
         integration/pipeline_test.cpp
+        integration/comparison_test.cpp
 )
 
 target_link_libraries(integration_tests
