--- a/.github/workflows/ctest.yml
+++ b/.github/workflows/ctest.yml
@@ -1,16 +1,21 @@
 name: CTest All
 
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        build_type: [Debug, Release, RelWithDebInfo]
+        build_type: [ Debug, Release, RelWithDebInfo ]
 
     steps:
       - uses: actions/checkout@v4
+
+      - uses: cachix/install-nix-action@v31
+        with:
+          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+      - run: nix develop
 
       - name: Configure CMake
         run: |
