--- a/.github/workflows/ctest.yml
+++ b/.github/workflows/ctest.yml
@@ -19,6 +19,11 @@ jobs:
         with:
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
 
+      - uses: cachix/cachix-action@v16
+        with:
+          name: kostareg
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+
       - name: Configure CMake
         run: |
           nix develop --command cmake -S . -B build -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
