--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -8,9 +8,6 @@ on:
 jobs:
   benchmark:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        build_type: Debug
 
     steps:
       - uses: actions/checkout@v4
@@ -26,10 +23,10 @@ jobs:
 
       - name: Configure CMake
         run: |
-          nix develop --command cmake -S . -B build -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+          nix develop --command cmake -S . -B build -DCMAKE_BUILD_TYPE=Debug
 
       - name: Build
-        run: nix develop --command cmake --build build --config ${{ matrix.build_type }}
+        run: nix develop --command cmake --build build --config Debug
 
       - name: Run Benchmarks
         run: nix develop --command ./build/benchmarks/benchmarks --benchmark_out=benchmark_results.json
