--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -23,10 +23,10 @@ jobs:
 
       - name: Configure CMake
         run: |
-          nix develop --command cmake -S . -B build -DCMAKE_BUILD_TYPE=Debug
+          nix develop --command cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
 
       - name: Build
-        run: nix develop --command cmake --build build --config Debug
+        run: nix develop --command cmake --build build --config Release
 
       - name: Run Benchmarks
         run: nix develop --command ./build/benchmarks/benchmarks --benchmark_out=benchmark_results.json
