chore: benchmark action always prints summary

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -43,3 +43,4 @@ jobs:
           fail-on-alert: true
           gh-pages-branch: 'main'
           benchmark-data-dir-path: 'docs/benchmarks'
+          summary-always: true
