--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -33,8 +33,13 @@ jobs:
 
       - name: Generate Coverage Report
         run: |
-          nix develop --command gcovr --gcov-executable="llvm-cov gcov" --gcov-ignore-errors=no_working_dir_found --exclude '.*_deps/googletest-src/.*' --object-directory build --root . --html --html-details -o coverage.html
-          nix develop --command gcovr --gcov-executable="llvm-cov gcov" --gcov-ignore-errors=no_working_dir_found --exclude '.*_deps/googletest-src/.*' --object-directory build --root . --xml -o coverage.xml
+          nix develop --command gcovr --gcov-executable="llvm-cov gcov" --gcov-ignore-errors=no_working_dir_found \
+            --exclude '.*_deps/googletest-src/.*' --exclude '.*_deps/googlebenchmark-src/.*' --exclude '.*tests/.*'
+            --exclude '.*benchmarks/.*' --object-directory build --root . --html --html-details -o coverage.html
+
+          nix develop --command gcovr --gcov-executable="llvm-cov gcov" --gcov-ignore-errors=no_working_dir_found
+            --exclude '.*_deps/googletest-src/.*' --exclude '.*_deps/googlebenchmark-src/.*' --exclude '.*tests/.*'
+            --exclude '.*benchmarks/.*' --object-directory build --root . --xml -o coverage.xml
 
       - name: Upload Coverage Artifact
         uses: actions/upload-artifact@v4
@@ -42,4 +47,5 @@ jobs:
           name: coverage-report
           path: |
             coverage.html
+            coverage.css
             coverage.xml
