--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -21,12 +21,12 @@ jobs:
           name: kostareg
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
 
-    - name: Cache Previous Benchmarks
-      id: cache-benchmarks
-      uses: actions/cache@v4
-      with:
-        path: ./cache/benchmark_results.json
-        key: ${{ runner.os }}-benchmarks
+      - name: Cache Previous Benchmarks
+        id: cache-benchmarks
+        uses: actions/cache@v4
+        with:
+          path: ./cache/benchmark_results.json
+          key: '${{ runner.os }}-benchmarks'
 
       - name: Configure CMake
         run: |
@@ -55,5 +55,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: benchmark-results
-          path: |
-            benchmark_results.json
+          path: benchmark_results.json
