--- a/.github/workflows/test-and-benchmark.yml
+++ b/.github/workflows/test-and-benchmark.yml
@@ -1,4 +1,4 @@
-name: Benchmarks
+name: All Tests
 
 on:
   push:
@@ -6,6 +6,43 @@ on:
   pull_request: ~
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        build_type: [ Debug, Release, RelWithDebInfo ]
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: cachix/install-nix-action@v31
+        with:
+          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: cachix/cachix-action@v16
+        with:
+          name: kostareg
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+
+      - name: Configure CMake
+        run: |
+          nix develop --command cmake -S . -B build -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+
+      - name: Build
+        run: nix develop --command cmake --build build --config ${{ matrix.build_type }}
+
+      - name: Run Tests
+        run: nix develop --command ctest --test-dir build --output-on-failure
+
+        # Save a unique cache to this run, which will be pulled by the benchmark to avoid
+        # rebuilding the release build.
+      - name: Save Release cache
+        if: matrix.config == 'Release'
+        uses: actions/cache@v4
+        with:
+          path: build/
+          key: ${{ runner.os }}-tachyon-release-${{ github.run_id }}
+
   benchmark:
     runs-on: ubuntu-latest
 
@@ -56,3 +93,4 @@ jobs:
         with:
           name: benchmark-results
           path: benchmark_results.json
+
