--- a/.github/workflows/test-and-benchmark.yml
+++ b/.github/workflows/test-and-benchmark.yml
@@ -58,19 +58,18 @@ jobs:
           name: kostareg
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
 
+      - name: Restore release build
+        uses: actions/cache@v4
+        with:
+          path: build/
+          key: ${{ runner.os }}-tachyon-release-${{ github.run_id }}
+
       - name: Cache Previous Benchmarks
         id: cache-benchmarks
         uses: actions/cache@v4
         with:
           path: ./cache/benchmark_results.json
           key: '${{ runner.os }}-benchmarks'
-
-      - name: Configure CMake
-        run: |
-          nix develop --command cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
-
-      - name: Build
-        run: nix develop --command cmake --build build --config Release
 
       - name: Run Benchmarks
         run: nix develop --command ./build/benchmarks/benchmarks --benchmark_out=benchmark_results.json
