fix: benchmarks action depends on build

--- a/.github/workflows/test-and-benchmark.yml
+++ b/.github/workflows/test-and-benchmark.yml
@@ -44,6 +44,7 @@ jobs:
         run: nix develop --command ctest --test-dir build --output-on-failure
 
   benchmark:
+    needs: test
     runs-on: ubuntu-latest
 
     steps:
