feat: expand add function of machine code generation

--- a/libs/codegen/CMakeLists.txt
+++ b/libs/codegen/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(tachyon_codegen STATIC
         src/bytecode_generator.cpp
+        src/ir_generator.cpp
         src/machine_generator.cpp
 )
 
